--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1,20 +1,38 @@
 
 \section{Overview}\label{sect:Overview}
 
-This tutorial demonstrates how to specify the models used in a ``total-evidence'' phylogenetic analysis of extant and fossil species, combining morphological and molecular data as well as stratigraphic range data from the fossil record.
-We begin by outlining the models used in this analysis in section \ref{sect:Introduction}, followed by a detailed exercise in section \ref{sect:Exercise} demonstrating how to apply these models in \RevBayes using data collected from living and fossil bears (family Ursidae).
+This tutorial demonstrates how to specify the models used in a ``total-evidence'' phylogenetic analysis of extant and fossil species, combining morphological and molecular data as well as stratigraphic range data from the fossil record \citep[\textit{i.e.,}][]{Ronquist2012a}.
+We begin by outlining the models used in this analysis in section \ref{sect:Introduction}, followed by a detailed exercise in section \ref{sect:Exercise} demonstrating how to apply these models in \RevBayes \citep{Hoehna2017a} using data collected from living and fossil bears (family Ursidae).
 
 \subsection{Requirements}\label{subsect:Overview-Requirements}
 
-We assume that you have read and hopefully completed the following tutorials:
-\begin{itemize}
+\subsubsection{Required Software}
+This tutorial requires that you download and install the latest release of \RevBayes \citep{Hoehna2017a}. 
+Directions for downloading and installing the software are available on the program webpage:
+\begin{center}
+\href{http://revbayes.com/}{http://revbayes.com}.
+\end{center} 
+
+The exercise provided also requires additional programs for editing text files and visualizing output. 
+Please download the following programs:
+\begin{itemize}[noitemsep,topsep=0pt]
+\item A text editor -- we suggest \href{https://www.sublimetext.com/}{Sublime Text}
+\item \href{http://tree.bio.ed.ac.uk/software/tracer/}{Tracer} -- for visualizing and assessing numerical parameter samples from \RevBayes
+\item Firefox or Google Chrome -- these are the supported web browsers for the phylogenetic tree visualization program, \href{http://tgvaughan.github.io/icytree/}{IcyTree}
+\end{itemize}
+
+\subsubsection{Prerequisite Tutorials}
+In addition to installing the software, this tutorial assumes that you have read and completed the following tutorials:
+\begin{itemize}[noitemsep,topsep=0pt]
 \item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Getting_Started/RB_Getting_Started.pdf}{Getting started}
 \item \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_Basics_Tutorial/RB_Basics_Tutorial.pdf}{\Rev basics}
 \end{itemize}
 
+
+
 \section{Introduction}\label{sect:Introduction}
 
-The ``total-evidence'' analysis described in this tutorial uses a graphical model integrating three separate likelihood components or data partitions (Fig. \ref{fig:module-gm}): one for molecular data (section \ref{subsect:Intro-GTR}), one for morphological data (section \ref{subsect:Intro-Morpho}), and one for fossil stratigraphic range data (section \ref{subsect:Intro-TipSampling}). In addition, all likelihood components are conditioned on a tree topology with divergence times, which is modeled according to a separate prior component (section \ref{subsect:Intro-FBD}).
+The ``total-evidence'' analysis described in this tutorial uses a graphical model \citep{Hoehna2014b} integrating three separate likelihood components or data partitions (Fig. \ref{fig:module-gm}): one for molecular data (section \ref{subsect:Intro-GTR}), one for morphological data (section \ref{subsect:Intro-Morpho}), and one for fossil stratigraphic range data (section \ref{subsect:Intro-TipSampling}). In addition, all likelihood components are conditioned on a tree topology with divergence times, which is modeled according to a separate prior component (section \ref{subsect:Intro-FBD}).
 \begin{figure}[h!]
 \fbox{%
 \begin{minipage}{\textwidth}\centering
@@ -33,15 +51,16 @@ This type of tree is shown in Figure \ref{fig:example-tree}.
 Importantly, this model can be used \textit{with or without} character data for the historical samples. 
 Thus, it provides a reasonable prior distribution for analyses combining morphological or DNA data for both extant and fossil taxa---\IE the so-called ``total-evidence'' approaches described by \citet{Ronquist2012a} \citep[also see][]{Pyron2011}. 
 When matrices of discrete morphological characters for both living and fossil species are unavailable, the fossilized birth-death model imposes a time structure on the tree by \textit{marginalizing} over all possible attachment points for the fossils on the extant tree \citep{Heath2014}, therefore, some prior knowledge of phylogenetic relationships is important, much like for calibration-density approaches.
-
 \begin{figure}[h!]
 \fbox{%
 \begin{minipage}{\textwidth}\centering
-\includegraphics[scale=0.3,angle=0]{\ResourcePath figures/tikz/fbd_gm}
-\caption{\small A graphical model of the fossilized birth-death model describing the generation of the time tree (``Time Tree Model'' in Fig.\ \ref{fig:module-gm}) used in this tutorial. The parameters of the fossilized birth-death process are labeled in orange. The speciation, extinction and fossilization rates are drawn from exponential distributions, while the origin time is uniformly distributed. The sampling probability is constant and equal to one.} %TODO write a more detailed legend
+\includegraphics[width=0.55\textwidth,angle=0]{\ResourcePath figures/tree_plot_with_fossils}
+\caption{\small One possible realization of the fossilized birth-death process starting at origin time $\phi$, showing fossil sampling events (red circles) and unsampled extinct lineages (dotted lines).}
 \end{minipage}}
-\label{fig:fbd_gm}
+\label{fig:example-tree}
 \end{figure}
+
+
 The FBD model (Fig. \ref{fig:fbd_gm}) describes the probability of the tree and fossils conditional on the birth-death parameters: $f[\mathcal{T} \mid \lambda, \mu, \rho, \psi, \phi]$, where $\mathcal{T}$ denotes the tree topology, divergence times, fossil occurrence times, and the times at which the fossils attach to the tree.
 %The parameters of the model are:
 %\begin{center}
@@ -57,6 +76,15 @@ The FBD model (Fig. \ref{fig:fbd_gm}) describes the probability of the tree and 
 %\end{center}
 The birth-death parameters $\lambda$ and $\mu$ denote the speciation and extinction rates, respectively. The ``fossilization rate'' or ``fossil recovery rate'' is denoted $\psi$ and describes the rate at which fossils are sampled along lineages of the tree. The sampling probability parameter $\rho$ represents the fraction of extant species that are ultimately sampled, and $\phi$ represents the time at which the process originated.
 
+\begin{figure}[h!]
+\fbox{%
+\begin{minipage}{\textwidth}\centering
+\includegraphics[scale=0.3,angle=0]{\ResourcePath figures/tikz/fbd_gm}
+\caption{\small A graphical model of the fossilized birth-death model describing the generation of the time tree (``Time Tree Model'' in Fig.\ \ref{fig:module-gm}) used in this tutorial. The parameters of the fossilized birth-death process are labeled in orange. The speciation, extinction and fossilization rates are drawn from exponential distributions, while the origin time is uniformly distributed. The sampling probability is constant and equal to one.} %TODO write a more detailed legend
+\end{minipage}}
+\label{fig:fbd_gm}
+\end{figure}
+
 In the example FBD tree shown in Figure \ref{fig:example-tree}, the diversification process originates at time $\phi$, giving rise to $n=20$ species in the present.
 All of the lineages represented in Figure \ref{fig:example-tree} (both solid and dotted lines) show the \textit{complete tree}. 
 This is the tree of all extant \textit{and} extinct lineages generated by the process.
@@ -68,23 +96,40 @@ The probability must be conditioned on the origin time of the process $\phi$.
 The origin ($\phi$) of a birth-death process is the starting time of the \textit{stem} lineage, thus this conditions on a single lineage giving rise to the tree.
 %Alternatively, a birth-death process can be conditioned on the age of the root ($x_1$), which is the time of the most-recent-common ancestor (MRCA) of the sampled lineages.
 %Here, the model assumes that the branching process starts with two lineages, each of which has the same starting time.
-\begin{figure}[h!]
-\fbox{%
-\begin{minipage}{\textwidth}\centering
-\includegraphics[width=0.55\textwidth,angle=0]{\ResourcePath figures/tree_plot_with_fossils}
-\caption{\small One possible realization of the fossilized birth-death process starting at origin time $\phi$, showing fossil sampling events (red circles) and unsampled extinct lineages (dotted lines).}
-\end{minipage}}
-\label{fig:example-tree}
-\end{figure}
+
 
 An important characteristic of the FBD model is that it accounts for the probability of sampled ancestor-descendant pairs \citep{foote1996}. 
 Given that fossils are sampled from lineages in the diversification process, the probability of sampling fossils that are ancestors to taxa sampled at a later date is correlated with the turnover rate ($r=\mu/\lambda$) and the fossil recovery rate ($\psi$).
 This feature is important, particularly for datasets with many sampled fossils. 
 In the example (Figure \ref{fig:example-tree}), several of the fossils have sampled descendants. These fossils have solid black lines leading to the present. 
+%TODO more intro on this section, maybe
+
+\subsubsection{Incorporating Fossil Stratigraphic Range Data}\label{subsect:Intro-TipSampling}
+
+In order to account for uncertainty in the ages of our fossil species, we can incorporate stratigraphic range information from the fossil record.
+We do this by assuming each fossil can occur with uniform probability anywhere within its observed stratigraphic range.
+This is somewhat different from the typical approach to node calibration.
+Here, instead of treating the calibration density as an additional prior distribution on the tree, we treat it as the \textit{likelihood} of our fossil data given the tree parameter.
+Specifically, we assume the likelihood of a particular fossil observation $\mathcal{F}_i$ is equal to one if the fossil's inferred age on the tree $t_i$ falls within its observed stratigraphic range $(a_i,b_i)$, and zero otherwise:
+$$f[\mathcal{F}_i \mid a_i, b_i, t_i] = \begin{cases}
+1 & \text{if } a_i < t_i < b_i\\
+0 & \text{otherwise}
+\end{cases}$$
+In other words, we assume the likelihood is equal to one if the inferred age is consistent with the fossil record.
+We can represent this likelihood in \RevBayes using any uniform distribution that is proportional to the likelihood, \IE non-zero when the likelihood is equal to one (Fig. \ref{fig:tipsampling_gm}).
+\begin{figure}[h!]
+\fbox{%
+\begin{minipage}{\textwidth}\centering
+\includegraphics[scale=0.3,angle=0]{\ResourcePath figures/tikz/tipsampling_gm}
+\caption{\small A graphical model of the fossil age likelihood model used in this tutorial. The likelihood of fossil observation $\mathcal{F}_i$ is uniform and non-zero when the inferred fossil age $t_i$ falls within the observed stratigraphic range $(a_i,b_i)$.}
+\end{minipage}}
+\label{fig:tipsampling_gm}
+\end{figure}
+
 
 \subsection{Nucleotide Sequence Evolution}\label{subsect:Intro-GTR}
 
-The model component for the molecular data uses a general time-reversible model of nucleotide evolution and gamma-distributed rate heterogeneity across sites.
+The model component for the molecular data uses a general time-reversible model of nucleotide evolution and gamma-distributed rate heterogeneity across sites. %TODO cite GTR+G
 This model of sequence evolution is covered thoroughly in the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.pdf}{Substitution Models} tutorial.
 
 
@@ -116,7 +161,7 @@ This assumption is equivalent to assuming that the stationary probability of bei
 
 In this tutorial, we will relax this assumption by allowing the stationary 1-state probability to take on any value between 0 and 1, drawn from a beta prior distribution.
 In addition, we will allow each morphological character to have its own substitution matrix with its own stationary frequency (Fig. \ref{fig:morpho_gm}).
-Then, similar to the way we model site-specific substitution rates using a discretized gamma distribution (described in \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.pdf}{Substitution Models}), we will model site-specific stationary frequencies using a discretized beta distribution \citep{Wright2016}.
+Then, similar to the way we model site-specific substitution rates using a discretized gamma distribution (described in the \href{https://github.com/revbayes/revbayes_tutorial/raw/master/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial.pdf}{Substitution Models} tutorial), we will model site-specific stationary frequencies using a discretized beta distribution \citep{Wright2016}.
 
 Because of the way morphological data are collected, we need to exercise caution in how we model the data. 
 Traditionally, phylogenetic trees were built from morphological data using parsimony. 
@@ -134,27 +179,10 @@ Therefore, it is important to use models that can condition on the coding bias.
 \label{fig:morpho_gm}
 \end{figure}
 
-\subsection{Incorporating Fossil Stratigraphic Range Data}\label{subsect:Intro-TipSampling}
+\subsubsection{The Morphological Clock}\label{subsub:Intro-MorphClock}
 
-In order to account for uncertainty in the ages of our fossil species, we can incorporate stratigraphic range information from the fossil record.
-We do this by assuming each fossil can occur with uniform probability anywhere within its observed stratigraphic range.
-This is somewhat different from the typical approach to node calibration.
-Here, instead of treating the calibration density as an additional prior distribution on the tree, we treat it as the \textit{likelihood} of our fossil data given the tree parameter.
-Specifically, we assume the likelihood of a particular fossil observation $\mathcal{F}_i$ is equal to one if the fossil's inferred age on the tree $t_i$ falls within its observed stratigraphic range $(a_i,b_i)$, and zero otherwise:
-$$f[\mathcal{F}_i \mid a_i, b_i, t_i] = \begin{cases}
-1 & \text{if } a_i < t_i < b_i\\
-0 & \text{otherwise}
-\end{cases}$$
-In other words, we assume the likelihood is equal to one if the inferred age is consistent with the fossil record.
-We can represent this likelihood in \RevBayes using any uniform distribution that is proportional to the likelihood, \IE non-zero when the likelihood is equal to one (Fig. \ref{fig:tipsampling_gm}).
-\begin{figure}[h!]
-\fbox{%
-\begin{minipage}{\textwidth}\centering
-\includegraphics[scale=0.3,angle=0]{\ResourcePath figures/tikz/tipsampling_gm}
-\caption{\small A graphical model of the fossil age likelihood model used in this tutorial. The likelihood of fossil observation $\mathcal{F}_i$ is uniform and non-zero when the inferred fossil age $t_i$ falls within the observed stratigraphic range $(a_i,b_i)$.}
-\end{minipage}}
-\label{fig:tipsampling_gm}
-\end{figure}
+%TODO write about the morphological clock
+
 
 \section{Exercise: Estimating the Phylogeny and Divergence Times of Fossil and Extant Bears}\label{sect:Exercise}
 
@@ -202,8 +230,17 @@ This information will be applied using clade constraints.
 
 \subsection{Data and Files}\label{subsect:Exercise-DataFiles}
 
-We provide the data files which we will use in this tutorial.
-You may want to use your own data instead.
+{\begin{framed}
+On your own computer, create a directory called {\textcolor{red}{\cl{RB\_TotalEvidenceDating\_FBD\_Tutorial}}} (or any name you like). 
+
+In this directory download and unzip the archive containing the data files: \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_TotalEvidenceDating_FBD_Tutorial/data.zip}{\cl{data.zip}}.
+
+This will create a folder called \cl{data} that contains the files necessary to complete this exercise.
+\end{framed}}
+
+
+%We provide the data files which we will use in this tutorial.
+%You may want to use your own data instead.
 In the \cl{data} folder, you will find the following files
 \begin{itemize}[noitemsep,topsep=0pt]
 \item \cl{bears\_taxa.tsv}: a tab-separated table listing every bear species (both fossil and extant) and their occurrence dates. For extant taxa, the occurrence date is \cl{0.0} (\IE the present) and for fossil species, the occurrence date is equal to the mean of the age range (the ranges are defined in a separate file).
@@ -216,14 +253,10 @@ In the \cl{data} folder, you will find the following files
 \subsection{Getting Started}\label{subsect:Exercise-GetStart}
 
 {\begin{framed}
-On your own computer, create a directory called {\textcolor{red}{\cl{RB\_TotalEvidenceDating\_FBD\_Tutorial}}} (or any name you like). 
-
-In this directory download and unzip the archive containing the data files: \href{https://github.com/revbayes/revbayes_tutorial/raw/master/RB_TotalEvidenceDating_FBD_Tutorial/data.zip}{\cl{data.zip}}.
-
-Additionally, create a new directory (in \cl{RB\_TotalEvidenceDating\_FBD\_Tutorial}) called {\textcolor{red}{\cl{scripts}}}
+Create a new directory (in \cl{RB\_TotalEvidenceDating\_FBD\_Tutorial}) called {\textcolor{red}{\cl{scripts}}}. (If you do not have this folder, please refer to the directions in section \ref{subsect:Exercise-DataFiles}.)
 \end{framed}}
 
-When you execute \RevBayes in this exercise, you will do so within the main directory you created (\cl{RB\_TotalEvidenceDating\_FBD\_Tutorial}).
+When you execute \RevBayes in this exercise, you will do so within the main directory you created (\cl{RB\_TotalEvidenceDating\_FBD\_Tutorial}), thus, if you are using a Unix-based operating system, we recommend that you add the \RevBayes binary to your path.
 
 %TODO Stuff about how to start or Rev basics?
 
@@ -593,7 +626,7 @@ You have completed the FBD model file. Save \cl{model\_FBD\_TEFBD.Rev} in the \c
 
 We will now move on to the next model file.
 \end{framed}}
-\pagebreak
+%\pagebreak
 
 
 \bigskip
@@ -855,7 +888,7 @@ source("scripts/model_Morph_TEFBD.Rev")
 mymodel = model(sf)
 \end{lstlisting}
 \end{snugshade*}}
-\pagebreak
+%\pagebreak
 
 \medskip
 \subsubsection{Specify Monitors and Output Filenames}\label{subsub:Exercise-Monitors}
@@ -908,8 +941,8 @@ source("scripts/mcmc_TEFBD.Rev")
 \end{lstlisting}
 \end{snugshade*}}
 
-\pagebreak
-This will execute the analysis and you should see the following output:
+%\pagebreak
+This will execute the analysis and you should see the following output (though not the exact same values):
 
 {\tiny{\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -1090,14 +1123,22 @@ mccTree(trace_pruned, "output/bears.mcc.tre" )
 
 
 When there are sampled ancestors present in the tree, visualizing the tree can be fairly difficult in traditional tree viewers.
-We will make use of a browser-based tree viewer called \href{http://tgvaughan.github.io/icytree/}{IcyTree}.
-This tree viewer has the ability to view sampled ancestor trees, as well as many other nice abilities for tree visualization. Navigate to the page and open the tree. 
+We will make use of a browser-based tree viewer called \href{http://tgvaughan.github.io/icytree/}{IcyTree}, created by \href{TV}{Tim Vaughan}.
+IcyTree has many unique options for visualizing phylogenetic trees and can produce publication-quality vector files (\IE svg). 
+Additionally, it correctly represents sampled ancestors on the tree as a node with only one descendant. 
+
+{\begin{framed}
+Navigate to \url{http://tgvaughan.github.io/icytree} and open the file \cl{output/bears.mcc.tre} in IcyTree.
+\end{framed}}
+
 
 Try to replicate Fig. \ref{fig:IcyTreeSumm}. Hint: Look under style, at ``Mark Singletons''.
 Why might a node with a sampled ancestor be referred to as a singleton?
 Try clicking on a branch.
 What are the fields telling you?
 Are the ages of the fossil tips the same as what was shown in Tracer? 
+
+%TODO more here, create final tree image
 
 \begin{figure}[h!]
 \fbox{%
